methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: return outside method definition
if (haveBaggle()) {return} else {droite();avance();gauche();}
                   ^